--- a/app/src/index.css
+++ b/app/src/index.css
@@ -5,3 +5,11 @@ html, body, #root {
 .h-100 {
   height: 100%;
 }
+
+ul > li {
+  list-style-type: disc;
+}
+
+ul > li:not(:last-child) {
+  margin-bottom: 1em;
+}
