--- a/app/src/index.css
+++ b/app/src/index.css
@@ -13,3 +13,12 @@ ul > li {
 ul > li:not(:last-child) {
   margin-bottom: 1em;
 }
+
+is-clickable {
+  cursor: pointer;
+  pointer-events: initial;
+}
+
+is-relative {
+  position: relative;
+}
